# ATP

.github/workflows/: checks.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main.h
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt
task4/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp  LeapTestCase.h
task4/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
task5/cmake-with-flask/: Dockerfile
task6/.github/workflows/: checks.yml
